--- a/home.html
+++ b/home.html
@@ -4,10 +4,16 @@
 <title>Random Stuff Reviews</title>
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="shortcut icon" href="icon.ico" type="image/png" />
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 </head>
 <body class= "main">
 	<header>
 	<h1 class="heading"><strong>Random Stuff Reviews</strong></h1>
+	<nav class="navbar navbar-default">
 	<ul>
 		<li>Home</li>
 		<li>
@@ -16,12 +22,16 @@
 		<li>
 			<a href="reviews.html">News</a>
 		</li>
-		
+
+
 
 	</ul>
-	</header>
+	</nav>
+	</header><br>
 	<h3>Top Reviews</h3>
 <p class="linesev"></p>
 
 </body>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </html>
